fixed page height on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -1304,7 +1304,7 @@ footer {
 
   .hero {
   
-    min-height: 400px;
+    height: 100vh;
   }
 
   .hero-content h1 {
